fix mobile bkg overflow

--- a/pstyle.css
+++ b/pstyle.css
@@ -453,7 +453,7 @@ h2 {
     background-position: 0% 50%;
   }
   50% {
-    background-position: 100% 50%;
+    background-position: 90% 50%;
   }
   100% {
     background-position: 0% 50%;
